tests/baselines/reference/decoratorOnArrowFunction.errors.txt
tests/cases/conformance/decorators/invalid/decoratorOnArrowFunction.ts(3,9): error TS1206: Decorators are not valid here.
tests/cases/conformance/decorators/invalid/decoratorOnArrowFunction.ts(3,17): error TS1005: '(' expected.


==== tests/cases/conformance/decorators/invalid/decoratorOnArrowFunction.ts (2 errors) ====
    declare function dec<T>(target: T): T;
    
    var F = @dec () => {
            ~
!!! error TS1206: Decorators are not valid here.
                    ~~
!!! error TS1005: '(' expected.
    }